# wasm-island

./: Cargo.toml  Dioxus.toml  flake.nix  index.html  main.css
assets/: main.css  main.css.br
assets/dioxus/: wasm-island.js  wasm-island.js.br  wasm-island_bg.wasm  wasm-island_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
src/: defaults.rs  main.rs  settings.rs
src/components/: enum_navbar.rs  enum_select.rs  mod.rs  number_input.rs  random_number_input.rs  slidebar.rs  slidebar_integer.rs
src/map_generator/: color.rs  generator.rs  interpolation.rs  mod.rs  shader.rs  vec3.rs
src/map_generator/heightmap/: diamond.rs  fractal.rs  midpoint.rs  mod.rs  utils.rs
src/map_generator/noise/: gradient.rs  mod.rs  simplex.rs  value.rs
