[package]
name = "wasm-island"
version = "0.1.0"
authors = ["Nico <nico_verdeille@hotmail.com>"]
edition = "2021"
description = "Heighmap generator based on noise functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bon = "3.0.2"
dioxus = { version = "0.5", features = ["web"] }
dioxus-logger = "0.5.1"
enum_dispatch = "0.3.13"
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }
web-sys = { version = "0.3.72", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"]}

[profile.release]
lto = true
opt-level = "s"
strip = true
